[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyphyex"
authors = [
    {name = "Quentin Rodier", email = "quentin.rodier@meteo.fr"},
    {name = "Sébastien Riette", email = "sebastien.riette@meteo.Fr"},
]
dynamic = ["version"]
description = "PHYEX package"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "netCDF4<=1.7.2", # line to be removed completely when belenos is updated
    "matplotlib",
    "pyfortool>=0.2.18",
    "numpy",
    "pandas<=2.3.2", # version constraint to be removed when belenos is updated
    "xarray",
    "epygram",
    "ctypesForFortran>=1.3.0,!=2.0.*,!=2.1.*",
    "ial_build>=1.4.8",
]

[project.urls]
Homepage = "https://github.com/UMR-CNRM/PHYEX"

[project.scripts]
"phyex-prep_code" = "pyphyex.prep_code:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "pyphyex.__version__"}

